@@ -733,8 +733,8 @@ function gf_getImage($image,$directory='') {
         'forum'             =>    'forum.png',
         'forumindex'        =>    'forumindex.png',
         'forumname'         =>    'forumname.gif',
-        'forumnotify_off'   =>    'forumnotify_off.gif',
-        'forumnotify_on'    =>    'forumnotify_on.gif',
+        'forumnotify_off'   =>    'notify_off.gif',
+        'forumnotify_on'    =>    'notify_on.gif',
         'gl_mootip_bg200'   =>    'gl_mootip_bg200.png',
         'green_dot'         =>    'green_dot.gif',
         'home'              =>    'home.png',
