@@ -1,7 +1,7 @@
 {# begin {templatelocation} #}
-<a href="{subscribelink}" rel="nofollow">{LANG_subscribe}</a>
+{# <a href="{subscribelink}" rel="nofollow">{LANG_subscribe}</a> #}
 {#   Alternative layout to use Images #}
-{#
+
 <a href="{subscribelink}" rel="nofollow">{subscribelinkimg}</a>
-#}
+
 {# end {templatelocation} #}
