@@ -6,7 +6,7 @@
 <script type="text/javascript" src="{site_url}/forum/javascript/ajax_rate.js"></script>
 <table width="100%" border="0" cellspacing="0" cellpadding="0" style="margin:2px;padding-right:10px;">
     <tr>
-        <td>{navbreadcrumbsimg}</td>
+        <td>{navbreadcrumbsimg}{rssfeed}</td>
         <td class="alignleft" style="width:95%;white-space:nowrap;">&nbsp;<a href="{site_url}/forum/index.php">{forum_home}</a>&nbsp;&#62;&nbsp;<a href="{site_url}/forum/index.php?cat={cat_id}">{cat_name}</a>&nbsp;&#62;&nbsp;<a href="{site_url}/forum/index.php?forum={forum_id}">{forum_name}</a></td>
         <td rowspan="2" class="alignright" style="width:100%;white-space:nowrap">{newtopic_link}</td>
         <td rowspan="2" class="alignright" style="padding-left:5px;width:100%;white-space:nowrap;">{replytopic_link}</td>
